--- a/pages/html.html
+++ b/pages/html.html
@@ -44,7 +44,7 @@
           <li><strong>Первая HTML-страница</strong>
             <ul>
               <li><a href="../pages/html/ch1-2-1.html">Теги <code>&lt;html></code>, <code>&lt;head></code>, <code>&lt;body></code>, структура HTML-документа.</a></li>
-              <li>Тег <code>&lt;title></code>, заголовки <code>&lt;h1> – &lt;h6></code>.</li>
+              <li><a href="../pages/html/ch1-2-2.html">Тег <code>&lt;title></code>, заголовки <code>&lt;h1> – &lt;h6></a></code>.</li>
               <li>Практика: создание первой страницы с заголовком и текстом.</li>
             </ul>
           </li>
