--- a/pages/html.html
+++ b/pages/html.html
@@ -54,7 +54,7 @@
         <ol>
           <li><strong>Параграфы и отступы</strong>
             <ul>
-              <li>Теги <code>&lt;p></code>, <code>&lt;br></code>, <code>&lt;hr></code>.</li>
+              <li><a href="../pages/html/ch2-1-1.html"">Теги <code>&lt;p></code>, <code>&lt;br></code>, <code>&lt;hr></a></code>.</li>
               <li>Практика: создание текста с параграфами и разделительными линиями.</li>
             </ul>
           </li>
