--- a/pages/html.html
+++ b/pages/html.html
@@ -60,7 +60,7 @@
           </li>
           <li><strong>Форматирование текста</strong>
             <ul>
-              <li>Жирный текст <code>&lt;b></code>, курсив <code>&lt;i></code>, подчёркнутый <code>&lt;u></code>, зачёркнутый <code>&lt;s></code>.</li>
+              <li><a href="../pages/html/ch2-2-1.html">Жирный текст <code>&lt;b></code>, курсив <code>&lt;i></code>, подчёркнутый <code>&lt;u></code>, зачёркнутый <code>&lt;s></a></code>.</li>
               <li>Сильное выделение <code>&lt;strong></code> и акцентирование <code>&lt;em></code>.</li>
               <li>Практика: форматирование абзацев с разными стилями текста.</li>
             </ul>
