--- a/pages/css/ch1-1.html
+++ b/pages/css/ch1-1.html
@@ -70,7 +70,7 @@
         <p><strong>Пример простого CSS-кода:</strong></p>
         <p>Вот пример небольшого CSS-файла:</p>
 <pre>
-  <code class="lang-html">
+  <code class="lang-css">
     body {
       font-family: Arial, sans-serif;
       background-color: #f0f0f0;
