--- a/pages/js.html
+++ b/pages/js.html
@@ -39,8 +39,8 @@
           <ul>
             <p><strong>День 1-2:</strong></p>
             <li> <a href="../pages/js/ch1-1.html">Что такое JavaScript и где его применяют</a> </li>
-            <li>Установка среды разработки (VS Code, Node.js)</li>
-            <li>Подключение JavaScript к HTML-документу</li>
+            <li><a href="../pages/js/ch1-2.html">Установка среды разработки (VS Code, Node.js)</a></li>
+            <li><a href="../pages/js/ch1-3.html">Подключение JavaScript к HTML-документу</a></li>
             <li> <a href="../pages/js/ch1-4.html">Введение в синтаксис JavaScript (переменные, типы данных)</a> </li>
           </ul>
 
