--- a/pages/html.html
+++ b/pages/html.html
@@ -61,7 +61,7 @@
           <li><strong>Форматирование текста</strong>
             <ul>
               <li><a href="../pages/html/ch2-2-1.html">Жирный текст <code>&lt;b></code>, курсив <code>&lt;i></code>, подчёркнутый <code>&lt;u></code>, зачёркнутый <code>&lt;s></a></code>.</li>
-              <li>Сильное выделение <code>&lt;strong></code> и акцентирование <code>&lt;em></code>.</li>
+              <li><a href="../pages/html/ch2-2-2.html">Сильное выделение <code>&lt;strong></code> и акцентирование <code>&lt;em></code>.</a></li>
               <li>Практика: форматирование абзацев с разными стилями текста.</li>
             </ul>
           </li>
