--- a/pages/html.html
+++ b/pages/html.html
@@ -67,7 +67,7 @@
           </li>
           <li><strong>Списки</strong>
             <ul>
-              <li>Нумерованные списки <code>&lt;ol></code> и ненумерованные <code>&lt;ul></code>, элементы списка <code>&lt;li></code>.</li>
+              <li><a href="../pages/html/ch2-3-1.html">Нумерованные списки <code>&lt;ol></code> и ненумерованные <code>&lt;ul></code>, элементы списка <code>&lt;li></a></code>.</li>
               <li>Практика: создание списков с различными типами пунктов.</li>
             </ul>
           </li>
