--- a/pages/html.html
+++ b/pages/html.html
@@ -77,7 +77,7 @@
         <ol>
           <li><strong>Гиперссылки</strong>
             <ul>
-              <li>Тег <code>&lt;a></code>, атрибуты <code>href</code>, <code>target</code>.</li>
+              <li><a href="../pages/html/ch3-1-1.html">Тег <code>&lt;a></code>, атрибуты <code>href</code>, <code>target</code>.</a></li>
               <li>Ссылки на внутренние страницы и внешние ресурсы.</li>
               <li>Практика: создание набора гиперссылок.</li>
             </ul>
