--- a/pages/html.html
+++ b/pages/html.html
@@ -78,7 +78,7 @@
           <li><strong>Гиперссылки</strong>
             <ul>
               <li><a href="../pages/html/ch3-1-1.html">Тег <code>&lt;a></code>, атрибуты <code>href</code>, <code>target</code>.</a></li>
-              <li>Ссылки на внутренние страницы и внешние ресурсы.</li>
+              <li><a href="../pages/html/ch3-1-2.html">Ссылки на внутренние страницы и внешние ресурсы.</a></li>
               <li>Практика: создание набора гиперссылок.</li>
             </ul>
           </li>
