--- a/pages/html.html
+++ b/pages/html.html
@@ -84,7 +84,7 @@
           </li>
           <li><strong>Изображения</strong>
             <ul>
-              <li>Тег <code>&lt;img></code>, атрибуты <code>src</code>, <code>alt</code>, <code>width</code>, <code>height</code>.</li>
+              <li><a href="../pages/html/ch3-2-1.html">Тег <code>&lt;img></code>, атрибуты <code>src</code>, <code>alt</code>, <code>width</code>, <code>height</code>.</a></li>
               <li>Практика: вставка и настройка изображений на странице.</li>
             </ul>
           </li>
