--- a/pages/html.html
+++ b/pages/html.html
@@ -95,7 +95,7 @@
           <li><strong>Семантические теги</strong>
             <ul>
               <li><a href="../pages/html/ch4-1-1.html">Основные структурные элементы: <code>&lt;header></code>, <code>&lt;footer></code>, <code>&lt;nav></code>, <code>&lt;main></code>, <code>&lt;article></code>, <code>&lt;section></code>, <code>&lt;aside></code>.</a></li>
-              <li>Важность семантики для SEO и доступности.</li>
+              <li><a href="../pages/html/ch4-1-2.html">Важность семантики для SEO и доступности.</a></li>
               <li>Практика: структурирование страницы с использованием семантических тегов.</li>
             </ul>
           </li>
