html table page

--- a/pages/html.html
+++ b/pages/html.html
@@ -101,7 +101,7 @@
           </li>
           <li><strong>Таблицы</strong>
             <ul>
-              <li>Теги <code>&lt;table></code>, <code>&lt;tr></code>, <code>&lt;td></code>, <code>&lt;th></code>, атрибуты colspan, rowspan.</li>
+              <li><a href="../pages/html/ch4-2-1.html">Теги <code>&lt;table></code>, <code>&lt;tr></code>, <code>&lt;td></code>, <code>&lt;th></code>, атрибуты colspan, rowspan.</a></li>
               <li>Практика: создание таблиц с различными форматами.</li>
             </ul>
           </li>
