--- a/pages/html.html
+++ b/pages/html.html
@@ -111,7 +111,7 @@
         <ol>
           <li><strong>Формы</strong>
             <ul>
-              <li>Основные теги: <code>&lt;form></code>, <code>&lt;input></code>, <code>&lt;label>,</code> <code>&lt;textarea></code>, <code>&lt;button></code>.</li>
+              <li><a href="../pages/html/ch5-1-1.html">Основные теги: <code>&lt;form></code>, <code>&lt;input></code>, <code>&lt;label>,</code> <code>&lt;textarea></code>, <code>&lt;button></code>.</a></li>
               <li>Поля ввода: текстовые поля, пароли, чекбоксы, радиокнопки, селекторы.</li>
               <li>Атрибуты: <code>name</code>, <code>action</code>, <code>method</code>, <code>placeholder</code>, <code>required</code>.</li>
               <li>Практика: создание форм для сбора данных пользователей.</li>
