html page attribute

--- a/pages/html.html
+++ b/pages/html.html
@@ -113,7 +113,7 @@
             <ul>
               <li><a href="../pages/html/ch5-1-1.html">Основные теги: <code>&lt;form></code>, <code>&lt;input></code>, <code>&lt;label>,</code> <code>&lt;textarea></code>, <code>&lt;button></code>.</a></li>
               <li><a href="../pages/html/ch5-1-2.html">Поля ввода: текстовые поля, пароли, чекбоксы, радиокнопки, селекторы.</a></li>
-              <li>Атрибуты: <code>name</code>, <code>action</code>, <code>method</code>, <code>placeholder</code>, <code>required</code>.</li>
+              <li><a href="../pages/html/ch5-1-3.html">Атрибуты: <code>name</code>, <code>action</code>, <code>method</code>, <code>placeholder</code>, <code>required</code>.</a></li>
               <li>Практика: создание форм для сбора данных пользователей.</li>
             </ul>
           </li>
