html page methods

--- a/pages/html.html
+++ b/pages/html.html
@@ -119,7 +119,7 @@
           </li>
           <li><strong>Отправка данных</strong>
             <ul>
-              <li>Понимание GET и POST методов.</li>
+              <li><a href="../pages/html/ch5-2-1.html">Понимание GET и POST методов.</a></li>
               <li>Обработка отправки форм на сервер.</li>
             </ul>
           </li>
