html page audio

--- a/pages/html.html
+++ b/pages/html.html
@@ -129,7 +129,7 @@
         <ol>
           <li><strong>Аудио и видео</strong>
             <ul>
-              <li>Теги <code>&lt;audio></code>, <code>&lt;video></code>, атрибуты <code>controls</code>, <code>autoplay</code>, <code>loop</code>.</li>
+              <li><a href="../pages/html/ch6-1-1.html">Теги <code>&lt;audio></code>, <code>&lt;video></code>, атрибуты <code>controls</code>, <code>autoplay</code>, <code>loop</code>.</a></li>
               <li>Практика: вставка мультимедиа на веб-страницу.</li>
             </ul>
           </li>
