html page more tags

--- a/pages/html.html
+++ b/pages/html.html
@@ -135,7 +135,7 @@
           </li>
           <li><strong>Интерактивные элементы</strong>
             <ul>
-              <li>Теги <code>&lt;details></code>, <code>&lt;summary></code>, <code>&lt;dialog></code>, <code>&lt;progress></code>, <code>&lt;meter></code>.</li>
+              <li><a href="../pages/html/ch6-2-1.html">Теги <code>&lt;details></code>, <code>&lt;summary></code>, <code>&lt;dialog></code>, <code>&lt;progress></code>, <code>&lt;meter></code>.</a></li>
               <li>Практика: работа с интерактивными элементами на странице.</li>
             </ul>
           </li>
