html meta tags page

--- a/pages/html.html
+++ b/pages/html.html
@@ -145,7 +145,7 @@
         <ol>
           <li><strong>Метаданные</strong>
             <ul>
-              <li>Тег <code>&lt;meta></code>, атрибуты <code>charset</code>, <code>name</code>, <code>content</code>, настройка заголовков и описаний для SEO.</li>
+              <li><a href="../pages/html/ch7-1-1.html">Тег <code>&lt;meta></code>, атрибуты <code>charset</code>, <code>name</code>, <code>content</code>, настройка заголовков и описаний для SEO.</a></li>
               <li>Практика: настройка метаданных для веб-страницы.</li>
             </ul>
           </li>
