html validator page

--- a/pages/html.html
+++ b/pages/html.html
@@ -169,7 +169,7 @@
         <ol>
           <li><strong>Валидация HTML</strong>
             <ul>
-              <li>Как проверять HTML-код на ошибки с помощью валидаторов.</li>
+              <li><a href="../pages/html/ch8-1-1.html">Как проверять HTML-код на ошибки с помощью валидаторов.</a></li>
               <li>Практика: исправление ошибок и улучшение качества кода.</li>
             </ul>
           </li>
