html responsive page

--- a/pages/html.html
+++ b/pages/html.html
@@ -153,7 +153,6 @@
             <ul>
               <li>Тег комментария <code>&lt;!-- комментарий --></code>.</li>
               <li>Использование комментариев для пояснений в коде.</li>
-              <li></li>
             </ul>
           </li>
           <li><strong>Ссылки на внешние ресурсы</strong>
@@ -180,7 +179,7 @@
           </li>
           <li><strong>Адаптивная верстка</strong>
             <ul>
-              <li>Основы адаптивности: использование семантических тегов и медиа-запросов.</li>
+              <li><a href="../pages/html/ch8-3-1.html">Основы адаптивности: использование семантических тегов и медиа-запросов.</a></li>
             </ul>
           </li>
         </ol>
