--- a/pages/html.html
+++ b/pages/html.html
@@ -188,7 +188,7 @@
         <ol>
           <li><strong>SEO основы</strong>
             <ul>
-              <li>Работа с тегами для SEO оптимизации.</li>
+              <li><a href="../pages/html/ch9-1-1.html">Работа с тегами для SEO оптимизации.</a></li>
               <li>Практика: улучшение SEO параметров существующего сайта.</li>
             </ul>
           </li>
