html accessibility page

--- a/pages/html.html
+++ b/pages/html.html
@@ -194,7 +194,7 @@
           </li>
           <li><strong>Доступность (Accessibility)</strong>
             <ul>
-              <li>Создание доступного интерфейса: <code>aria-labels</code>, alt-описания, семантические теги.</li>
+              <li><a href="../pages/html/ch9-2-1.html">Создание доступного интерфейса: <code>aria-labels</code>, alt-описания, семантические теги.</a></li>
               <li>Практика: улучшение доступности страницы.</li>
             </ul>
           </li>
