--- a/pages/css/ch3-2.html
+++ b/pages/css/ch3-2.html
@@ -9,27 +9,6 @@
     <link rel="stylesheet" href="../../styles/prism.css">
     <script src="../../scripts/prism.js" defer></script>
     <script src="../../scripts/script.js" defer></script>
-    <style>
-      /* Селектор потомков */
-      .parent p {
-          color: blue; /* Все элементы <p> внутри элемента с классом 'parent' */
-      }
-
-      /* Селектор детей */
-      .parent > h2 {
-          color: green; /* Только прямые потомки <h2> элемента с классом 'parent' */
-      }
-
-      /* Селектор соседей (смежный) */
-      h2 + p {
-          color: red; /* Первый <p>, который следует сразу за <h2> */
-      }
-
-      /* Селектор общего соседа (все соседние) */
-      h2 ~ p {
-          color: orange; /* Все <p>, которые следуют за <h2> на одном уровне */
-      }
-  </style>
   </head>
 
   <body>
@@ -50,108 +29,165 @@
     <!--основной блок с информацией-->
     <main>
       <article>
-        <h1>Комбинированные селекторы в CSS</h1>
-        <p>Комбинированные селекторы позволяют выбирать элементы на основе их отношений с другими элементами в документе.</p>
+        <h1>Комбинированные селекторы: потомки, дети, соседние элементы.</h1><hr>
+        <p>Комбинированные селекторы CSS — это мощный инструмент, позволяющий выбирать элементы в зависимости от их взаимного расположения в иерархии HTML-документа. Подробно рассмотрим селекторы: <strong>селектор потомков, селектор детей, селекторы соседей (смежный и общий)</strong>, их особенности, примеры и лучшие практики использования.</p>
+        <h3>1. Селектор потомков (Descendant Selector)</h3>
+        <p><strong>Синтаксис</strong>: <code>предок потомок</code></p>
+        <p>Селектор потомков выбирает все элементы, которые находятся внутри другого элемента, независимо от уровня вложенности. Такой селектор полезен для задания стилей всем элементам, принадлежащим к конкретной группе (например, всем абзацам внутри блока с классом <code>.container</code>).</p>
+        <p>Пример:</p>
 <pre>
   <code class="lang-css">
-    &lt;style>
-      /* Селектор потомков */
-      .parent p {
-          color: blue; /* Все элементы &lt;p> внутри элемента с классом 'parent' */
-      }
+    /*CSS*/
 
-      /* Селектор детей */
-      .parent > h2 {
-          color: green; /* Только прямые потомки &lt;h2> элемента с классом 'parent' */
-      }
-
-      /* Селектор соседей (смежный) */
-      h2 + p {
-          color: red; /* Первый &lt;p>, который следует сразу за &lt;h2> */
-      }
-
-      /* Селектор общего соседа (все соседние) */
-      h2 ~ p {
-          color: orange; /* Все &lt;p>, которые следуют за &lt;h2> на одном уровне */
-      }
-    &lt;/style>
+    .container p {
+      color: darkblue;
+    }
   </code>
 </pre>
 
-        <h2>1. Селектор потомков</h2>
-        <div class="parent">
-            <p>Этот абзац находится внутри элемента с классом 'parent' и будет синим.</p>
-            <div>
-                <p>Этот абзац тоже потомок 'parent', поэтому тоже будет синим.</p>
-            </div>
-        </div>
-        <p>Этот абзац не является потомком элемента с классом 'parent', поэтому на него стиль не повлияет.</p>
-        <p>Пример использования:</p>
-        <pre><code>.parent p {
-        color: blue;
-    }</code></pre>
+<pre>
+  <code class="lang-html">
+    &lt;!-- HTML -->
 
-        <h2>2. Селектор детей</h2>
-        <div class="parent">
-            <h2>Этот заголовок — прямой потомок элемента с классом 'parent', и он будет зеленым.</h2>
-            <div>
-                <h2>Этот заголовок не является прямым потомком 'parent', поэтому на него стиль не повлияет.</h2>
-            </div>
-        </div>
-        <p>Пример использования:</p>
-        <pre><code>.parent > h2 {
-        color: green;
-    }</code></pre>
+    &lt;div class="container">
+      &lt;p>Этот абзац будет темно-синим.&lt;/p>
+      &lt;div>
+        &lt;p>Этот абзац также будет темно-синим.&lt;/p>
+      &lt;/div>
+    &lt;/div>
 
-        <h2>3. Селектор соседей (смежный)</h2>
-        <h2>Этот заголовок</h2>
-        <p>Этот абзац идет сразу после заголовка <code>&lt;h2&gt;</code>, и он будет красным.</p>
-        <p>Пример использования:</p>
-        <pre><code>h2 + p {
-        color: red;
-    }</code></pre>
+    &lt;p>Этот абзац вне контейнера и останется без изменений.&lt;/p>
+  </code>
+</pre>
+        <p><strong>Особенности и случаи использования:</strong>
+          <ul>
+            <li><strong>Гибкость</strong>: применим ко всем вложенным элементам, независимо от их глубины.</li>
+            <li><strong>Простота</strong>: подходит для быстрого оформления крупных блоков.</li>
+            <li><strong>Поддержка вложенности</strong>: стили будут применены ко всем потомкам.</li>
+          </ul>
+        </p>
+        <p><strong>Недостаток:</strong>
+          <ul>
+            <li><strong>Неоднозначность</strong>: может привести к нежелательным последствиям, если потомки находятся на разной глубине и имеют стили, конфликтующие с другими стилями.</li>
+          </ul>
+        </p>
+        <h3>2. Селектор детей (Child Selector)</h3>
+        <p><strong>Синтаксис</strong>: <code>предок > потомок</code></p>
+        <p>Селектор детей выбирает только те элементы, которые являются <strong>прямыми потомками</strong> указанного родителя. В отличие от селектора потомков, селектор детей более ограничен и обеспечивает точечное управление стилями, где важно, чтобы стили применялись только к непосредственным потомкам.</p>
+        <p>Пример:</p>
+<pre>
+  <code class="lang-css">
+    /*CSS*/
 
-        <h2>4. Селектор общего соседа</h2>
-        <h2>Этот заголовок</h2>
-        <p>Этот абзац — соседний элемент на одном уровне с заголовком <code>&lt;h2&gt;</code>, поэтому он будет оранжевым.</p>
-        <p>Этот абзац тоже находится на одном уровне и пойдет следом, так что он тоже станет оранжевым.</p>
-        <p>Пример использования:</p>
-        <pre><code>h2 ~ p {
-        color: orange;
-    }</code></pre>
+    .container > p {
+      font-weight: bold;
+    }
+  </code>
+</pre>
 
-    <p><strong>Подробное объяснение:</strong></p>
-    <ol>
-      <li>Селектор потомков (descendant selector):
-        <ul>
-          <li>Этот селектор выбирает элементы, которые являются потомками указанного родительского элемента.</li>
-          <li>Пример: .parent p — выбирает все &lt;p>, находящиеся внутри элемента с классом parent, даже если между ними есть другие элементы.</li>
-          <li>В примере выше все абзацы внутри элемента с классом parent будут синими.</li>
-        </ul>
-      </li>
-      <li>Селектор детей (child selector):
-        <ul>
-          <li>Этот селектор выбирает только прямых потомков указанного родителя.</li>
-          <li>Пример: .parent > h2 — выберет только те заголовки &lt;h2>, которые являются прямыми детьми элемента с классом parent.</li>
-          <li>В примере первый заголовок &lt;h2> будет зеленым, потому что он прямой потомок элемента с классом parent.</li>
-        </ul>
-      </li>
-      <li>Селектор соседей (adjacent sibling selector):
-        <ul>
-          <li>Этот селектор выбирает элемент, который непосредственно следует за указанным элементом на одном уровне иерархии.</li>
-          <li>Пример: h2 + p — выбирает первый абзац &lt;p>, который идет сразу после заголовка &lt;h2>.</li>
-          <li>В примере абзац, который идет сразу после &lt;h2>, станет красным.</li>
-        </ul>
-      </li>
-      <li>Селектор общего соседа (general sibling selector):
-        <ul>
-          <li>Этот селектор выбирает все элементы, которые являются соседями указанного элемента на одном уровне.</li>
-          <li>Пример: h2 ~ p — выбирает все абзацы &lt;p>, которые следуют за &lt;h2> на том же уровне иерархии.</li>
-          <li>В примере все абзацы, идущие за &lt;h2>, станут оранжевыми.</li>
-        </ul>
-      </li>
-    </ol>
-        
+<pre>
+  <code class="lang-html">
+    &lt;!-- HTML -->
+
+    &lt;div class="container">
+      &lt;p>Этот абзац будет полужирным.&lt;/p>
+      &lt;div>
+        &lt;p>Этот абзац останется неизменным.&lt;/p>
+      &lt;/div>
+    &lt;/div>
+  </code>
+</pre>
+        <p><strong>Особенности и случаи использования:</strong>
+          <ul>
+            <li><strong>Контроль над уровнем вложенности</strong>: позволяет избежать конфликтов с другими вложенными элементами.</li>
+            <li><strong>Более высокая специфичность</strong>: применим только к элементам, которые находятся на определённом уровне иерархии.</li>
+          </ul>
+        </p>
+        <p><strong>Недостаток:</strong>
+          <ul>
+            <li><strong>Меньшая гибкость</strong>: если структура меняется, то селектор может потерять применимость или потребовать изменений.</li>
+          </ul>
+        </p>
+        <h3>3. Селекторы соседей</h3>
+        <p>Селекторы соседей позволяют выбирать элементы, которые находятся <strong>на одном уровне</strong> и следуют за указанным элементом. Различают два типа соседей: <strong>смежный</strong> и <strong>общий</strong>.</p>
+        <p><strong>Смежный сосед (Adjacent Sibling Selector)</strong></p>
+        <p><strong>Синтаксис</strong>: <code>элемент1 + элемент2</code></p>
+        <p>Этот селектор выбирает элемент, который <strong>идет сразу после</strong> указанного элемента и является его ближайшим соседом на том же уровне.</p>
+        <p>Пример:</p>
+<pre>
+  <code class="lang-css">
+    /*CSS*/
+
+    h2 + p {
+      margin-top: 0;
+      color: darkgreen;
+    }
+  </code>
+</pre>
+
+<pre>
+  <code class="lang-html">
+    &lt;!-- HTML -->
+
+    &lt;h2>Заголовок&lt;/h2>
+    &lt;p>Этот абзац сразу после заголовка и будет зеленым без верхнего отступа.&lt;/p>
+    &lt;p>Этот абзац останется без изменений.&lt;/p>
+  </code>
+</pre>
+        <p><strong>Особенности и случаи использования:</strong>
+          <ul>
+            <li><strong>Локальный стиль</strong>: полезен, когда необходимо изменить стиль только ближайшего элемента.</li>
+            <li><strong>Контроль над стилями рядом расположенных элементов</strong>: позволяет упрощать CSS, не добавляя лишние классы или ID.</li>
+          </ul>
+        </p>
+        <p><strong>Недостаток:</strong>
+          <ul>
+            <li><strong>Ограниченность применения</strong>: действует только на первый элемент после указанного; последующие элементы не затрагиваются.</li>
+          </ul>
+        </p>
+        <h3>Общий сосед (General Sibling Selector)</h3>
+        <p><strong>Синтаксис</strong>: <code>элемент1 ~ элемент2</code></p>
+        <p>Общий сосед выбирает <strong>все элементы на одном уровне иерархии</strong>, которые следуют за указанным элементом. В отличие от смежного соседа, общий селектор выбирает не только первый элемент, а все подходящие.</p>
+        <p>Пример:</p>
+<pre>
+  <code class="lang-css">
+    /*CSS*/
+
+    h2 ~ p {
+      color: gray;
+    }
+  </code>
+</pre>
+
+<pre>
+  <code class="lang-html">
+    &lt;!-- HTML -->
+
+    &lt;h2>Заголовок&lt;/h2>
+    &lt;p>Этот абзац будет серым.&lt;/p>
+    &lt;p>Этот тоже будет серым, так как находится на том же уровне и следует за заголовком.&lt;/p>
+  </code>
+</pre>
+        <p><strong>Особенности и случаи использования:</strong>
+          <ul>
+            <li><strong>Гибкость</strong>: выбирает сразу все подходящие элементы, которые находятся на том же уровне и идут после указанного элемента.</li>
+            <li><strong>Упрощение кода</strong>: позволяет применить стили ко многим элементам без избыточных классов или идентификаторов.</li>
+          </ul>
+        </p>
+        <p><strong>Недостаток:</strong>
+          <ul>
+            <li><strong>Сложность в поддержке</strong>: если структура документа меняется, такой селектор может потребовать изменений для правильного отображения.</li>
+          </ul>
+        </p>
+        <h3>Лучшие практики использования комбинированных селекторов</h3>
+        <ol>
+          <li><strong>Избегайте избыточной вложенности</strong>: чем больше уровней вложенности и специфичности, тем сложнее управлять CSS-кодом.</li>
+          <li><strong>Учитывайте иерархию и специфичность</strong>: чем более специфичен селектор, тем труднее будет переписать его стили, поэтому избегайте глубоких вложений.</li>
+          <li><strong>Не используйте ID и комбинированные селекторы вместе</strong>: ID имеют высокую специфичность и плохо поддаются переопределению.</li>
+          <li><strong>Тестируйте на разных разрешениях</strong>: комбинированные селекторы могут взаимодействовать с разметкой по-разному, если меняется структура элементов или вводятся медиа-запросы.</li>
+        </ol>
+        <p><strong>Заключение</strong></p>
+        <p>Комбинированные селекторы в CSS — мощное средство для тонкой настройки стилей, особенно при создании сложных макетов. Они помогают управлять стилями в зависимости от взаимного расположения элементов, улучшая читабельность и сокращая избыточность CSS-кода. Правильное использование комбинированных селекторов позволяет создавать легко поддерживаемые, гибкие и адаптивные стили для всех элементов страницы.</p>
       </article>
     </main>
 
