--- a/pages/css.html
+++ b/pages/css.html
@@ -55,7 +55,7 @@
           <p><strong>3. Селекторы в CSS</strong></p>
           <li><a href="../pages/css/ch3-1.html">Простые селекторы: по тегам, классам, идентификаторам.</a></li>
           <li><a href="../pages/css/ch3-2.html">Комбинированные селекторы: потомки, дети, соседние элементы.</a></li>
-          <li>Псевдоклассы: <code style="background-color: rgba(169, 169, 169, 0.315);">:hover</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:focus</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:active</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:nth-child()</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:last-child()</code>.</li>
+          <li><a href="../pages/css/ch3-3.html">Псевдоклассы: <code style="background-color: rgba(169, 169, 169, 0.315);">:hover</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:focus</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:active</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:nth-child()</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:last-child()</code>.</a></li>
           <li>Псевдоэлементы: <code style="background-color: rgba(169, 169, 169, 0.315);">::before</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">::after</code>.</li>
           <li>Атрибутные селекторы.</li>
         </ul>
