css page selectors

--- a/pages/css.html
+++ b/pages/css.html
@@ -57,7 +57,7 @@
           <li><a href="../pages/css/ch3-2.html">Комбинированные селекторы: потомки, дети, соседние элементы.</a></li>
           <li><a href="../pages/css/ch3-3.html">Псевдоклассы: <code style="background-color: rgba(169, 169, 169, 0.315);">:hover</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:focus</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:active</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:nth-child()</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:last-child()</code>.</a></li>
           <li><a href="../pages/css/ch3-4.html">Псевдоэлементы: <code style="background-color: rgba(169, 169, 169, 0.315);">::before</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">::after</code>.</a></li>
-          <li>Атрибутные селекторы.</li>
+          <li><a href="../pages/css/ch3-5.html">Атрибутные селекторы.</a></li>
         </ul>
 
         <ul>
