--- a/pages/css.html
+++ b/pages/css.html
@@ -7,6 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
     <link rel="stylesheet" href="../styles/style.css">
+    <style>
+      a {
+        outline: none;
+        /* text-decoration: none; */
+        color: rgb(54, 47, 47);
+      }
+
+      a:link {
+        color: black;
+      }
+
+      a:visited {
+        /* color: #437a16; */
+      }
+
+      a:focus {
+        
+      }
+
+      a:hover {
+        /* border-bottom: 1px solid; */
+        background: rgba(220, 220, 220, 0.789);
+      }
+
+      a:active {
+        border: 4px inset white;
+        border-radius: 4px;
+        background: whitesmoke;
+        color: black;
+      }
+    </style>
 
   </head>
 
@@ -47,8 +78,8 @@
           <p><strong>2. Базовые стили</strong></p>
           <li><a href="../pages/css/ch2-1.html">Работа с текстом: <code style="background-color: rgba(169, 169, 169, 0.315);">font-size</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">font-family</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">font-weight</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">text-align</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">text-transform</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">line-height</code>.</a></li>
           <li><a href="../pages/css/ch2-2.html">Цвета и фон: <code style="background-color: rgba(169, 169, 169, 0.315);">color</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">background-color</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">background-image</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">opacity</code>.</a></li>
-          <li><a href="../pages/css/ch2-3.html">Отступы и поля (<code style="background-color: rgba(169, 169, 169, 0.315);">margins</code> и <code style="background-color: rgba(169, 169, 169, 0.315);">padding</a></code>).</li>
-          <li><a href="../pages/css/ch2-4.html">Бордеры и их свойства: <code style="background-color: rgba(169, 169, 169, 0.315);">border</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">border-radius</a></code>.</li>
+          <li><a href="../pages/css/ch2-3.html">Отступы и поля (<code style="background-color: rgba(169, 169, 169, 0.315);">margins</code> и <code style="background-color: rgba(169, 169, 169, 0.315);">padding)</code>.</a></li>
+          <li><a href="../pages/css/ch2-4.html">Бордеры и их свойства: <code style="background-color: rgba(169, 169, 169, 0.315);">border</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">border-radius</code>.</a></li>
         </ul>
 
         <ul>
@@ -62,8 +93,8 @@
 
         <ul>
           <p><strong>4. Работа с блоками и макетом</strong></p>
-          <li>Блочные и строчные элементы.</li>
-          <li>Свойства <code style="background-color: rgba(169, 169, 169, 0.315);">display: block</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">inline-block</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">none</code>.</li>
+          <li><a href="../pages/css/ch4-1.html">Блочные и строчные элементы.</a></li>
+          <li><a href="../pages/css/ch4-2.html">Свойства <code style="background-color: rgba(169, 169, 169, 0.315);">display: block</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">inline-block</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">none</code>.</a></li>
           <li>Модель блочной коробки (Box Model).</li>
           <li>Введение в Flexbox: контейнер и элементы.</li>
           <li>Введение в CSS Grid: работа с сетками.</li>
