--- a/pages/html.html
+++ b/pages/html.html
@@ -7,6 +7,37 @@
     <title>HTML</title>
     <link rel="stylesheet" href="../styles/style.css">
     <script src="../scripts/script.js" defer></script>
+    <style>
+      a {
+        outline: none;
+        /* text-decoration: none; */
+        color: rgb(54, 47, 47);
+      }
+
+      a:link {
+        color: black;
+      }
+
+      a:visited {
+        /* color: #437a16; */
+      }
+
+      a:focus {
+        
+      }
+
+      a:hover {
+        /* border-bottom: 1px solid; */
+        background: rgba(220, 220, 220, 0.789);
+      }
+
+      a:active {
+        border: 4px inset white;
+        border-radius: 4px;
+        background: whitesmoke;
+        color: black;
+      }
+    </style>
   </head>
 
   <body>
