--- a/pages/css.html
+++ b/pages/css.html
@@ -95,7 +95,7 @@
           <p><strong>4. Работа с блоками и макетом</strong></p>
           <li><a href="../pages/css/ch4-1.html">Блочные и строчные элементы.</a></li>
           <li><a href="../pages/css/ch4-2.html">Свойства <code style="background-color: rgba(169, 169, 169, 0.315);">display: block</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">inline-block</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">none</code>.</a></li>
-          <li>Модель блочной коробки (Box Model).</li>
+          <li><a href="../pages/css/ch4-3.html">Модель блочной коробки (Box Model).</a></li>
           <li>Введение в Flexbox: контейнер и элементы.</li>
           <li>Введение в CSS Grid: работа с сетками.</li>
         </ul>
