--- a/pages/css/ch4-3.html
+++ b/pages/css/ch4-3.html
@@ -322,7 +322,7 @@
             <p class="resultP"><strong>Результат:</strong></p>
           
             <div class="card">
-              <img src="/images/image_test.PNG" alt="Пример изображения" class="card-img">
+              <img src="../../images/image_test.PNG" alt="Пример изображения" class="card-img">
               <div class="card-content">
                 <p class="card-title"><strong>Заголовок</strong></p>
                 <p class="card-description">Описание карточки...</p>
