--- a/pages/css/ch4-3.html
+++ b/pages/css/ch4-3.html
@@ -91,7 +91,7 @@
 
         <h3>Визуализация Box Model</h3>
         <p>Для лучшего понимания можно представить Box Model следующим образом:</p>
-        <img src="/images/boxmodel.png" alt="boxmodel">
+        <img src="../../images/boxmodel.png" alt="boxmodel">
 <!-- <pre>
   <code>
     +-----------------------------------+
