--- a/pages/css.html
+++ b/pages/css.html
@@ -97,7 +97,7 @@
           <li><a href="../pages/css/ch4-2.html">Свойства <code style="background-color: rgba(169, 169, 169, 0.315);">display: block</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">inline-block</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">none</code>.</a></li>
           <li><a href="../pages/css/ch4-3.html">Модель блочной коробки (Box Model).</a></li>
           <li><a href="../pages/css/ch4-4.html">Введение в Flexbox: контейнер и элементы.</a></li>
-          <li>Введение в CSS Grid: работа с сетками.</li>
+          <li><a href="../pages/css/ch4-5.html">Введение в CSS Grid: работа с сетками.</a></li>
         </ul>
 
         <ul>
