css flexbox/grid page

--- a/pages/css.html
+++ b/pages/css.html
@@ -104,7 +104,7 @@
           <p><strong>5. Позиционирование элементов</strong></p>
           <li><a href="../pages/css/ch5-1.html">Статичное, относительное, абсолютное и фиксированное позиционирование.</a></li>
           <li><a href="../pages/css/ch5-2.html">Свойства <code style="background-color: rgba(169, 169, 169, 0.315);">top</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">right</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">bottom</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">left</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">z-index</code>.</a></li>
-          <li>Современные макеты с помощью Flexbox и Grid.</li>
+          <li><a href="../pages/css/ch5-3.html">Современные макеты с помощью Flexbox и Grid.</a></li>
         </ul>
 
         <ul>
