css adaptive page

--- a/pages/css.html
+++ b/pages/css.html
@@ -109,7 +109,7 @@
 
         <ul>
           <p><strong>6. Адаптивный дизайн</strong></p>
-          <li>Введение в адаптивную верстку.</li>
+          <li><a href="../pages/css/ch6-1.html">Введение в адаптивную верстку.</a></li>
           <li>Использование медиа-запросов (<code style="background-color: rgba(169, 169, 169, 0.315);">@media</code>) для различных устройств.</li>
           <li>Основы подхода "Mobile First".</li>
           <li>Работа с резиновыми единицами: <code style="background-color: rgba(169, 169, 169, 0.315);">em</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">rem</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">vw</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">vh</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">%</code>.</li>
